Fix logo no shrinking down; smaller padding on smaller screens

--- a/scss/_emuzone.scss
+++ b/scss/_emuzone.scss
@@ -41,6 +41,7 @@ div.logo {
 
 div.logo img {
   object-fit: contain;
+  width: 100%;
   height: 60px;
 }
 
@@ -76,6 +77,12 @@ main.container {
 .content {
   background: #FDF8F0;
   padding: 2em;
+}
+
+@include media-breakpoint-down(lg) {
+  .content {
+    padding: 1em;
+  }
 }
 
 .posted-on {
